# mental_health

./: .env.example  README.md  main.py  package-lock.json  package.json  pyproject.toml
agent/alzira/: therapist.py
agents/: cognitive_coach.py  crisis_agent.py  therapist.py
alzira.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
core/: db.py  llm.py
mental_health/: .env.example  FIRESTORE_SETUP.md  README.md  pyproject.toml
mental_health/src/mental_health/: crew.py  db.py  main.py
mental_health/src/mental_health/config/: agents.yaml  tasks.yaml
prompts/: instructions.py
src/app/: page.js
src/app/(auth)/login/: page.jsx
src/app/(auth)/signup/: page.jsx
src/app/client/chat/: page.jsx
src/app/client/tasks/: page.jsx
src/app/dashboard/: layout.jsx  page.jsx
src/app/dashboard/(client-interaction)/: page.jsx
src/app/dashboard/chat/: layout.jsx
src/mental_health.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/mental_health_chatbot/agents/: therapist.py
src/mental_health_chatbot/core/: llm.py
teams/: therapy_team.py
tests/integration/: llm_test.py
