[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alzira"
version = "0.1.0"
description = "AI-powered mental health support companion"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	"agno",
	"python-dotenv",
	"fastapi",
	"uvicorn",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
